[gd_scene load_steps=6 format=2]

[ext_resource path="res://Prefabs/MainMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Prefabs/SetDificulty.tscn" type="PackedScene" id=2]
[ext_resource path="res://Prefabs/Game.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/SceneManager.gd" type="Script" id=8]
[ext_resource path="res://Sprites/new_tileset.tres" type="TileSet" id=9]

[node name="Main" type="Node2D"]

[node name="SceneManager" type="Node" parent="."]
script = ExtResource( 8 )
menu_path = NodePath("../MainMenu")
set_dificulty_path = NodePath("../SetDificulty")
game_path = NodePath("../Game")

[node name="MainMenu" parent="." instance=ExtResource( 1 )]

[node name="SetDificulty" parent="." instance=ExtResource( 2 )]

[node name="Game" parent="." instance=ExtResource( 3 )]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 9 )
format = 1

[connection signal="on_start" from="MainMenu" to="SceneManager" method="_on_MainMenu_on_start"]
[connection signal="on_dificulty_set" from="SetDificulty" to="SceneManager" method="_on_SetDificulty_on_dificulty_set"]
[connection signal="go_to_main_menu" from="Game" to="SceneManager" method="_on_Game_go_to_main_menu"]
